--- a/Consultivazione/Documentazione/style.css
+++ b/Consultivazione/Documentazione/style.css
@@ -32,7 +32,8 @@ section{
 img{
     margin-top: 10px;
     margin-bottom: 10px;
-}
+    max-width: 1100px;
+    }
 .sfondoBianco{
     background-color: whitesmoke;
     color: rgb(22, 22, 22);
